--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </header>
             </div>
-            <div class="flex items-center justify-center gap-16">  
+            <div class="flex items-center justify-center gap-16" data-aos="fade-down">  
                 <button id="button-yes" class="font-nunito text-gray text-3xl md:text-5xl transition-transform ease-out hover:scale-x-110">Sim</button>
                 <a href="https://youtu.be/XTkFAKb8kbo?si=0U6xCuhDk2jMsMYX&t=79" target="_blank">
                     <button class="font-nunito text-gray text-3xl md:text-5xl transition-transform ease-out hover:scale-x-110">Não</button>
